plugins {
    id 'org.springframework.boot' version '3.5.4'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'java'
    id 'ca.cutterslade.analyze' version '1.10.0'
}

group = 'com.skybit'
version = '0.10-SNAPSHOT'
sourceCompatibility = '23'

repositories {
    mavenCentral()
}

dependencyManagement {
    dependencies {

        dependencySet(group: 'org.slf4j', version: '2.0.17') {
            entry 'slf4j-api'
            entry 'log4j-over-slf4j'
            entry 'jcl-over-slf4j'
            entry 'jul-to-slf4j'
        }
        dependency 'ch.qos.logback:logback-classic:1.5.18'
        dependency 'org.apache.commons:commons-lang3:3.8.1'
        dependency 'org.liquibase:liquibase-core:3.8.2'
        dependency 'commons-io:commons-io:2.8.0'
        dependency 'org.apache.httpcomponents:httpclient:4.5.13'
        dependency 'org.jsoup:jsoup:1.13.1'
        dependency 'org.apache.commons:commons-exec:1.3'
        dependency 'org.apache.commons:commons-lang3:3.12.0'

        dependencySet(group: 'org.seleniumhq.selenium', version: '4.34.0') {
            entry 'selenium-api'
            entry 'selenium-json'
            entry 'selenium-http'
            entry 'selenium-java'
            entry 'selenium-chrome-driver'
            entry 'selenium-chromium-driver'
            entry 'selenium-support'
            entry 'selenium-edge-driver'
            entry 'selenium-remote-driver'
            entry 'selenium-safari-driver'
            entry 'selenium-opera-driver'
            entry 'selenium-ie-driver'
            entry 'selenium-firefox-driver'
            entry 'selenium-devtools-v138'
        }
        dependency 'org.apache.commons:commons-exec:1.3'
    }
}

dependencies {
    implementation 'org.springframework.boot:spring-boot:3.5.4'
    implementation 'org.springframework.boot:spring-boot-autoconfigure'
    implementation 'org.seleniumhq.selenium:selenium-api'
    implementation 'org.seleniumhq.selenium:selenium-devtools-v138'
    implementation 'org.seleniumhq.selenium:selenium-chrome-driver'
    implementation 'org.seleniumhq.selenium:selenium-chromium-driver'
    implementation 'org.seleniumhq.selenium:selenium-remote-driver'
    implementation 'org.seleniumhq.selenium:selenium-support'
    implementation 'org.apache.httpcomponents:httpclient'
    implementation 'org.apache.commons:commons-lang3'
    implementation 'org.apache.commons:commons-exec'

    implementation 'org.slf4j:slf4j-api'
    implementation 'org.springframework:spring-beans'
    implementation 'org.springframework:spring-context'
    implementation 'org.springframework:spring-core'
    implementation 'org.apache.httpcomponents:httpcore'

    runtimeOnly 'ch.qos.logback:logback-classic'
    runtimeOnly 'org.slf4j:jcl-over-slf4j'
    runtimeOnly 'org.slf4j:log4j-over-slf4j'
    runtimeOnly 'org.slf4j:jul-to-slf4j'

}

test {
    useJUnitPlatform()
}
